Pug, gulp, less set up

--- a/index.pug
+++ b/index.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title Meanit
+    link(rel="stylesheet", href="styles.css")
   body(ng-app="meanit", ng-controller="MainCtrl")
     div {{test}}
     form(ng-submit="addPost()")
