--- a/index.pug
+++ b/index.pug
@@ -3,15 +3,37 @@ html
   head
     title Meanit
     link(rel="stylesheet", href="styles.css")
-  body(ng-app="meanit", ng-controller="MainCtrl")
-    div {{test}}
-    form(ng-submit="addPost()")
-      input(type="text", ng-model="title")
-      button(type="submit") Post
-    div(ng-repeat="post in posts | orderBy: '-upvotes'").
-      {{post.title}} - upvotes: {{post.upvotes}}
+  body(ng-app="meanit")
+    div
+      ui-view
     script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js")
+    script(src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js")
     script(src="app.js")
+    script(type="text/ng-template", id="/home.html")
+      div.page-header
+        h1 Meanit
+      form(ng-submit="addPost()")
+        input(type="text", placeholder="Title", ng-model="title")
+        input(type="text", placeholder="Link", ng-model="link")
+        button(type="submit") Post
+      div.post(ng-repeat="post in posts | orderBy: '-upvotes'")
+        div.upvote(ng-click="upvote(post)") ^
+        div.upvotes {{post.upvotes}}
+        a.title(ng-show="post.link", href="{{post.link}}") {{post.title}} 
+        div.title(ng-hide="post.link") {{post.title}}
+        a.comments(href="#/posts/{{$index}}") Comments
+    script(type="text/ng-template", id="/posts.html")
+      div.page-header
+        h1 Meanit
+        h3
+          a(ng-show="post.link" href="{{post.link}}") {{post.title}}
+          div(ng-hide="post.link") {{post.title}}
+      div.comment(ng-repeat="comment in post.comments | orderBy='-upvotes'")
+        div.upvote(ng-click="upvote(comment)") ^
+        | {{post.upvotes}} - by {{comment.author}}  
+        div.comment-body {{comment.body}}
+      
+
 
     
     
