--- a/styles.less
+++ b/styles.less
@@ -1,6 +1,7 @@
 html {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
 
 body {
@@ -10,9 +11,48 @@ body {
   font-size: 16px;
   font-family: 'Ubuntu', sans-serif;
 
+  div, a {
+    &.post {
+      display: block;
+      width: 100%;
+      height: 60px;
+    }
+
+    &.upvote {
+      display: inline-block;
+      text-align: center;
+      line-height: 30px;
+      width: 30px;
+      cursor: pointer;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+
+    &.upvotes {
+      display: inline-block;
+      width: 30px;
+    }
+
+    &.title {
+      display: inline-block;
+      width: 50%;
+    }
+
+    &.comments {
+      display: block;
+      padding-left: 60px;
+    }
+  }
+  
   button {
     font-family: 'Ubuntu', sans-serif;
   }
-}
 
-    
+  input {
+    margin-right: 10px;
+  }
+}
