--- a/home.pug
+++ b/home.pug
@@ -1,2 +1,12 @@
-div
+div.page-header
   h1 Meanit
+form(ng-submit="addPost()")
+  input(type="text", placeholder="Title", ng-model="title")
+  input(type="text", placeholder="Link", ng-model="link")
+  button(type="submit") Post
+div.post(ng-repeat="post in posts | orderBy: '-upvotes'")
+  div.upvote(ng-click="upvote(post)") ^
+  div.upvotes {{post.upvotes}}
+  a.title(ng-show="post.link", href="{{post.link}}") {{post.title}} 
+  div.title(ng-hide="post.link") {{post.title}}
+  a.comments(href="#/posts/{{$index}}") Comments
