--- a/views/index.pug
+++ b/views/index.pug
@@ -2,10 +2,10 @@ doctype html
 html
   head
     title Meanit
-    link(rel="stylesheet", href="styles.css")
+    link(rel="stylesheet", href="public/dist/styles.css")
   body(ng-app="meanit")
     div
       ui-view
     script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js")
     script(src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js")
-    script(src="app.js")
+    script(src="public/js/app.js")
