--- a/views/home.pug
+++ b/views/home.pug
@@ -9,4 +9,4 @@ div.post(ng-repeat="post in posts | orderBy: '-upvotes'")
   div.upvotes {{post.upvotes}}
   a.title(ng-show="post.link", href="{{post.link}}") {{post.title}} 
   div.title(ng-hide="post.link") {{post.title}}
-  a.comments(href="#/posts/{{$index}}") Comments
+  a.comments(href="#/posts/{{post._id}}") Comments
