--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,20 @@ html
     title Meanit
     link(rel="stylesheet", href="public/dist/styles.css")
   body(ng-app="meanit")
-    div
+    nav.navbar(ng-controller="NavCtrl")
+      ul.navbar-left
+        li
+          a.home(href="#") Meanit
+      ul.navbar-right
+        li(ng-show="isLoggedIn()")
+          a {{currentUser()}}
+        li(ng-show="isLoggedIn()")
+          a(href="", ng-click="logout()") Logout
+        li(ng-hide="isLoggedIn()")
+          a(href="#/register") Register
+        li(ng-hide="isLoggedIn()")
+          a(href="#/login") Login
+    div.content
       ui-view
     script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js")
     script(src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js")
