--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -1,58 +1,306 @@
-html {
+html, body {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-}
-
-body {
-  width: 100%;
-  height: 100%;
-  padding: 20px;
   font-size: 16px;
   font-family: 'Ubuntu', sans-serif;
+  margin: 0;
+  padding: 0px;
+  border: 0px;
+}
 
-  div, a {
-    &.post {
-      display: block;
-      width: 100%;
-      height: 60px;
+.navbar {
+  width: 100%;
+  height: 40px;
+  margin-top: 0px;
+  border: 0px;
+  background-color: #2e6171;
+  position: fixed;
+  white-space: nowrap;
+  display: inline;
+
+  div {
+    height: 40px;
+    line-height: 40px;
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+
+    a {
+      display: inline-block;
+      min-width: 80px;
+      height: 100%;
+      text-align: center;
+      text-decoration: none;
+      color: #b3c2ce;
+      transition: all 0.5s;
+
+      &.home {
+        font-size: 20px;
+        width: 100px;
+      }
+
+      &:hover {
+        color: #d4e5f4;
+      }
     }
 
-    &.upvote {
-      display: inline-block;
-      text-align: center;
+    &.navbar-left {
+      float: left;
+    }
+
+    &.navbar-right {
+      float: right;
+    }
+  }
+}
+
+.content {
+  padding: 80px 40px;
+
+  form {
+    &.post-form {
+      font-size: 20px;
       line-height: 30px;
-      width: 30px;
-      cursor: pointer;
-      -webkit-touch-callout: none;
+      padding: 20px;
+      border: 1px solid #798086;
+      border-radius: 5px;
+      margin-bottom: 20px;
+      
+      input {
+        display: block;
+        width: 30%;
+        margin: 7px 0px;
+        border: 1px solid #798086;
+        padding: 5px;
+        border-radius: 4px;
+
+        &::-webkit-input-placeholder {
+          color: #798086;
+        }
+        
+        &:-moz-placeholder {
+          color: #798086;
+        }
+        
+        &::-moz-placeholder {
+          color: #798086;
+        }
+        
+        &:-ms-input-placeholder {
+          color: #798086;
+        }
+      }
+
+      textarea {
+        resize: none;
+        display: block;
+        width: 30%;
+        border: 1px solid #798086;
+        padding: 5px;
+        border-radius: 4px;
+        font-family: 'Ubuntu', sans-serif;
+
+        &::-webkit-input-placeholder {
+          color: #798086;
+        }
+        
+        &:-moz-placeholder {
+          color: #798086;
+        }
+        
+        &::-moz-placeholder {
+          color: #798086;
+        }
+        
+        &:-ms-input-placeholder {
+          color: #798086;
+        }
+      }
+      
+      button {
+        width: 65px;
+        height: 24px;
+        color: #d4e5f4;
+        padding: 0px;
+        border: 0px;
+        margin: 0px;
+        border-radius: 4px;
+        background-color: #62929e;
+        cursor: pointer;
+      }
+    }
+
+    &.comment-form {
+      font-size: 20px;
+      padding: 20px;
+      border: 1px solid #b3c2ce;
+      border-radius: 5px;
+
+      textarea {
+        resize: none;
+        width: 30%;
+        font-family: 'Ubuntu', sans-serif;
+        display: block;
+        margin: 7px 0px;
+        padding: 5px;
+        border: 1px solid #798086;
+        border-radius: 4px;
+
+        &::-webkit-input-placeholder {
+          color: #798086;
+        }
+        
+        &:-moz-placeholder {
+          color: #798086;
+        }
+        
+        &::-moz-placeholder {
+          color: #798086;
+        }
+        
+        &:-ms-input-placeholder {
+          color: #798086;
+        }
+      }
+
+      button {
+        width: 65px;
+        height: 24px;
+        color: #d4e5f4;
+        padding: 0px;
+        border: 0px;
+        margin: 0px;
+        border-radius: 4px;
+        background-color: #62929e;
+        cursor: pointer;
+      }
+    }
+  }
+
+  div {
+    &.alert {
+      display: inline-block;
+      font-size: 20px;
+      line-height: 30px;
+      padding: 5px 8px;
+      margin-bottom: 20px;
+    }
+
+    &.post {
+      display: block;
+      font-size: 16px;
+      line-height: 16px;
+      min-height: 50px;
+      padding: 10px;
+      border: 1px solid #b3c2ce;
+      margin: 5px 0px;
+      border-radius: 5px;
+
+      & > .title {
+        font-size: 24px;
+        display: block;
+        margin-top: 4px;
+      }
+
+      & > .author {
+        font-size: 16px;
+        display: inline-block;
+        margin-top: 12px;
+        margin-right: 10px;
+      }
+      
+      & > .comments {
+        font-size: 16px;
+        display: inline-block;
+        margin-top: 12px;
+      }
+    }
+
+    &.post-header {
+      padding: 20px;
+      border: 2px solid #62929e;
+      min-height: 75px;
+      border-radius: 5px;
+      margin-bottom: 20px;
+      font-size: 20px;
+      
+      & > .title {
+        font-size: 24px;
+        display: block;
+        margin-bottom: 5px;
+      }
+
+      & > .author {
+        font-size: 12px;
+        margin-bottom: 4px;
+      }
+
+      & > .body {
+        font-size: 16px;
+        line-height: 18px;
+        border: 0px;
+        word-wrap: break-word;
+      }
+    }
+
+    &.comment {
+      display: block;
+      font-size: 16px;
+      line-height: 16px;
+      min-height: 51px;
+      padding: 10px;
+      border: 1px solid #b3c2ce;
+      margin: 5px 0px;
+      border-radius: 5px;
+
+      & > .author {
+        font-size: 12px;
+        margin-bottom: 4px;
+      }
+
+      & > .body {
+        font-size: 16px;
+        line-height: 18px;
+        border: 0px;
+        word-wrap: break-word;
+        padding-left: 45px;
+      }
+    }
+  }
+
+  .upvote-wrapper {
+    width: 30px;
+    height: 100%;
+    float: left;
+    margin-right: 15px;
+    text-align: center;
+    
+    & > .upvote {
+      margin-bottom: 3px;
       -webkit-user-select: none;
-      -khtml-user-select: none;
       -moz-user-select: none;
       -ms-user-select: none;
       user-select: none;
     }
 
-    &.upvotes {
-      display: inline-block;
-      width: 30px;
+    & > .rating {
+
     }
 
-    &.title {
-      display: inline-block;
-      width: 50%;
+    & > .downvote {
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
     }
+    
+    & > .enabled {
+      cursor: pointer;
+    }      
+  }
+}
 
-    &.comments {
-      display: block;
-      padding-left: 60px;
-    }
-  }
-  
-  button {
-    font-family: 'Ubuntu', sans-serif;
-  }
-
-  input {
-    margin-right: 10px;
-  }
+h1, h3 {
+  margin: 0px;
 }
