--- a/views/home.pug
+++ b/views/home.pug
@@ -1,17 +1,21 @@
-form(ng-show="isLoggedIn()", ng-submit="addPost()")
+form.post-form(ng-show="isLoggedIn()", ng-submit="addPost()") New Post
   input(type="text", placeholder="Title", ng-model="title")
   input(type="text", placeholder="Link", ng-model="link")
-  button(type="submit") Post
-div(ng-hide="isLoggedIn()")
-  a(href="#/login") Login 
-  | or 
-  a(href="#/register") register 
-  | to post or comment.
-div.post(ng-repeat="post in posts | orderBy: '-upvotes'")
-  div.upvote.clickable(ng-show="isLoggedIn()", ng-click="upvote(post)") ^
-  div.upvote(ng-hide="isLoggedIn()") ^
-  div.upvotes {{post.upvotes}}
-  a.title(ng-show="post.link", href="{{post.link}}") {{post.title}} 
+  textarea(rows=5, placeholder="Text", ng-model="body")
+  button(type="submit") Submit
+div.alert(ng-hide="isLoggedIn()")
+  a(href="#/login") Login
+  |  or 
+  a(href="#/register") register
+  |  to post or comment.
+div.post(ng-repeat="post in posts | orderBy: '-rating'")
+  div.upvote-wrapper
+    div.upvote.enabled(ng-show="isLoggedIn()", ng-click="upvote(post)") +
+    div.upvote(ng-hide="isLoggedIn()") +
+    div.rating {{post.rating}}
+    div.downvote.enabled(ng-show="isLoggedIn()", ng-click="downvote(post)") &#8208;
+    div.downvote(ng-hide="isLoggedIn()") &#8208;
+  a.title(ng-show="post.link", href="{{post.link}}") {{post.title}}
   div.title(ng-hide="post.link") {{post.title}}
-  div.author(ng-show="post.author") {{post.author}}
+  div.author posted by {{post.author}}
   a.comments(href="#/posts/{{post._id}}") Comments
