Fixed text padding in posts

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -241,6 +241,7 @@ html, body {
         line-height: 18px;
         border: 0px;
         word-wrap: break-word;
+        padding-left: 45px;
       }
     }
 
