Fixed some styling issues and added comment count

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -199,6 +199,7 @@ html, body {
 
       & > .title {
         font-size: 24px;
+        line-height: 24px;
         display: block;
         margin-top: 4px;
       }
@@ -242,6 +243,7 @@ html, body {
         border: 0px;
         word-wrap: break-word;
         padding-left: 45px;
+        white-space: pre-line;
       }
     }
 
@@ -266,6 +268,8 @@ html, body {
         border: 0px;
         word-wrap: break-word;
         padding-left: 45px;
+        white-space: pre;
+        margin-bottom: 10px;
       }
     }
   }
