--- a/views/home.pug
+++ b/views/home.pug
@@ -15,7 +15,9 @@ div.post(ng-repeat="post in posts | orderBy: '-rating'")
     div.rating {{post.rating}}
     div.downvote.enabled(ng-show="isLoggedIn()", ng-click="downvote(post)") &#8208;
     div.downvote(ng-hide="isLoggedIn()") &#8208;
-  a.title(ng-show="post.link", href="{{post.link}}") {{post.title}}
-  div.title(ng-hide="post.link") {{post.title}}
+  div.title
+    a(ng-show="post.link", href="{{post.link}}") {{post.title}}
+    div(ng-hide="post.link") {{post.title}}
   div.author posted by {{post.author}}
-  a.comments(href="#/posts/{{post._id}}") Comments
+  a.comments(href="#/posts/{{post._id}}")
+    | {{post.comments.length == 1 ? '1 comment' : post.comments.length + ' comments'}}
