--- a/views/posts.pug
+++ b/views/posts.pug
@@ -4,8 +4,9 @@ div.post-header
     div.upvote(ng-hide="isLoggedIn()") +
     div.rating {{post.rating}}
     div.downvote.enabled(ng-show="isLoggedIn()", ng-click="downvote(post)") &#8208;
-  a.title(ng-show="post.link" href="{{post.link}}") {{post.title}}
-  div.title(ng-hide="post.link") {{post.title}}
+  div.title
+    a(ng-show="post.link" href="{{post.link}}") {{post.title}}
+    div(ng-hide="post.link") {{post.title}}
   div.author posted by {{post.author}}
   div.body {{post.body}}
 form.comment-form(ng-show="isLoggedIn()", ng-submit="addComment()") New Comment
