--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -1,12 +1,117 @@
+@input-placeholder-color: #798086;
+@thin-border-color: #798086;
+
+.input-placeholder-color() {
+  &::-webkit-input-placeholder {
+    color: @input-placeholder-color;
+  }
+  
+  &:-moz-placeholder {
+    color: @input-placeholder-color;
+  }
+  
+  &::-moz-placeholder {
+    color: @input-placeholder-color;
+  }
+  
+  &:-ms-input-placeholder {
+    color: @input-placeholder-color;
+  }
+}
+
+.thin-border {
+  border: 1px solid @thin-border-color;
+  border-radius: 4px;
+}
+
+.thick-border {
+  border: 2px solid #62929e;
+  border-radius: 5px;
+}
+
+.form {
+  font-size: 20px;
+  line-height: 30px;
+  padding: 20px;
+  .thin-border;
+
+  input {
+    display: block;
+    width: 15%;
+    margin: 8px 0px;
+    padding: 5px;
+    .thin-border;
+    
+    &::-webkit-input-placeholder {
+      color: @input-placeholder-color;
+    }
+    
+    &:-moz-placeholder {
+      color: @input-placeholder-color;
+    }
+    
+    &::-moz-placeholder {
+      color: @input-placeholder-color;
+    }
+    
+    &:-ms-input-placeholder {
+      color: @input-placeholder-color;
+    }
+  }
+  
+  textarea {
+    resize: none;
+    display: block;
+    width: 30%;
+    border: 1px solid @input-placeholder-color;
+    padding: 5px;
+    border-radius: 4px;
+    font-family: 'Ubuntu', sans-serif;
+    margin: 5px 0px;
+    
+    &::-webkit-input-placeholder {
+      color: @input-placeholder-color;
+    }
+    
+    &:-moz-placeholder {
+      color: @input-placeholder-color;
+    }
+    
+    &::-moz-placeholder {
+      color: @input-placeholder-color;
+    }
+    
+    &:-ms-input-placeholder {
+      color: @input-placeholder-color;
+    }
+  }
+  
+  button {
+    width: 65px;
+    height: 25px;
+    color: #d4e5f4;
+    padding: 0px;
+    border: 0px;
+    margin: 0px;
+    border-radius: 5px;
+    background-color: #62929e;
+    cursor: pointer;
+  }
+}
+
+.no-spacing {
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
+}
+
 html, body {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
   font-size: 16px;
   font-family: 'Ubuntu', sans-serif;
-  margin: 0;
-  padding: 0px;
-  border: 0px;
+  .no-spacing;
 }
 
 .navbar {
@@ -59,122 +164,22 @@ html, body {
   padding: 80px 40px;
 
   form {
+    .form;
+    
+    &.register-form {
+
+    }
+
+    &.login-form {
+
+    }
+    
     &.post-form {
-      font-size: 20px;
-      line-height: 30px;
-      padding: 20px;
-      border: 1px solid #798086;
-      border-radius: 5px;
-      margin-bottom: 20px;
-      
-      input {
-        display: block;
-        width: 30%;
-        margin: 7px 0px;
-        border: 1px solid #798086;
-        padding: 5px;
-        border-radius: 4px;
 
-        &::-webkit-input-placeholder {
-          color: #798086;
-        }
-        
-        &:-moz-placeholder {
-          color: #798086;
-        }
-        
-        &::-moz-placeholder {
-          color: #798086;
-        }
-        
-        &:-ms-input-placeholder {
-          color: #798086;
-        }
-      }
-
-      textarea {
-        resize: none;
-        display: block;
-        width: 30%;
-        border: 1px solid #798086;
-        padding: 5px;
-        border-radius: 4px;
-        font-family: 'Ubuntu', sans-serif;
-
-        &::-webkit-input-placeholder {
-          color: #798086;
-        }
-        
-        &:-moz-placeholder {
-          color: #798086;
-        }
-        
-        &::-moz-placeholder {
-          color: #798086;
-        }
-        
-        &:-ms-input-placeholder {
-          color: #798086;
-        }
-      }
-      
-      button {
-        width: 65px;
-        height: 24px;
-        color: #d4e5f4;
-        padding: 0px;
-        border: 0px;
-        margin: 0px;
-        border-radius: 4px;
-        background-color: #62929e;
-        cursor: pointer;
-      }
     }
 
     &.comment-form {
-      font-size: 20px;
-      padding: 20px;
-      border: 1px solid #b3c2ce;
-      border-radius: 5px;
 
-      textarea {
-        resize: none;
-        width: 30%;
-        font-family: 'Ubuntu', sans-serif;
-        display: block;
-        margin: 7px 0px;
-        padding: 5px;
-        border: 1px solid #798086;
-        border-radius: 4px;
-
-        &::-webkit-input-placeholder {
-          color: #798086;
-        }
-        
-        &:-moz-placeholder {
-          color: #798086;
-        }
-        
-        &::-moz-placeholder {
-          color: #798086;
-        }
-        
-        &:-ms-input-placeholder {
-          color: #798086;
-        }
-      }
-
-      button {
-        width: 65px;
-        height: 24px;
-        color: #d4e5f4;
-        padding: 0px;
-        border: 0px;
-        margin: 0px;
-        border-radius: 4px;
-        background-color: #62929e;
-        cursor: pointer;
-      }
     }
   }
 
@@ -274,7 +279,7 @@ html, body {
     }
   }
 
-  .upvote-wrapper {
+    .upvote-wrapper {
     width: 30px;
     height: 100%;
     float: left;
