--- a/views/login.pug
+++ b/views/login.pug
@@ -1,8 +1,6 @@
-div.page-header
-  h1 Meanit
-div(ng-show="error")
+div.error(ng-show="error")
   span {{error.message}}
-form(ng-submit="login()")
+form.login-form(ng-submit="login()")
   h3 Login
   input(type="text", placeholder="Username", ng-model="user.username")
   input(type="password", placeholder="Password", ng-model="user.password")
