--- a/views/register.pug
+++ b/views/register.pug
@@ -1,8 +1,6 @@
-div.page-header
-  h1 Meanit
-div(ng-show="error")
+div.error(ng-show="error")
   span {{error.message}}
-form(ng-submit="register()")
+form.register-form(ng-submit="register()")
   h3 Register
   input(type="text", placeholder="Username", ng-model="user.username")
   input(type="password", placeholder="Password", ng-model="user.password")
