--- a/views/index.pug
+++ b/views/index.pug
@@ -2,16 +2,17 @@ doctype html
 html
   head
     title Meanit
+    base(href="/")
     link(rel="stylesheet", href="public/dist/styles.css")
   body(ng-app="meanit")
     div.navbar(ng-controller="NavCtrl")
       div.navbar-left
-        a.home(href="#/home") Meanit
+        a.home(href="/home") Meanit
       div.navbar-right
         a(ng-show="isLoggedIn()") Welcome, {{currentUser()}}.
         a(ng-show="isLoggedIn()", href="", ng-click="logout()") Logout
-        a(ng-hide="isLoggedIn()", href="#/register") Register
-        a(ng-hide="isLoggedIn()", href="#/login") Login
+        a(ng-hide="isLoggedIn()", href="/register") Register
+        a(ng-hide="isLoggedIn()", href="/login") Login
     div.content
       ui-view
     script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js")
