--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -128,6 +128,10 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+
+    &.voted {
+      color: #00ff00;
+    }
   }
 
   & > .rating {
@@ -139,11 +143,15 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+
+    &.voted {
+      color: #ff0000;
+    }
   }
   
   & > .enabled {
     cursor: pointer;
-  }      
+  }
 }
 
 .no-spacing {
@@ -239,6 +247,10 @@ html, body {
       margin-bottom: 20px;
     }
 
+    &.error {
+      margin-bottom: 10px;
+    }
+    
     &.post {
       .div-rating;
 
