--- a/views/home.pug
+++ b/views/home.pug
@@ -10,11 +10,11 @@ div.alert(ng-hide="isLoggedIn()")
   |  to post or comment.
 div.post(ng-repeat="post in posts | orderBy: '-rating'")
   div.upvote-wrapper
-    div.upvote.enabled(ng-show="isLoggedIn()", ng-click="upvote(post)") +
+    div.upvote.enabled(ng-show="isLoggedIn()", ng-class="hasUpvotedPost(post) ? 'voted' : ''", ng-click="upvote(post)") +
     div.upvote(ng-hide="isLoggedIn()") +
     div.rating {{post.rating}}
-    div.downvote.enabled(ng-show="isLoggedIn()", ng-click="downvote(post)") &#8208;
-    div.downvote(ng-hide="isLoggedIn()") &#8208;
+    div.downvote.enabled(ng-show="isLoggedIn()", ng-class="hasDownvotedPost(post) ? 'voted' : ''", ng-click="downvote(post)") -
+    div.downvote(ng-hide="isLoggedIn()") -
   div.title
     a(ng-show="post.link", href="{{post.link}}") {{post.title}}
     div(ng-hide="post.link") {{post.title}}
