--- a/views/users.pug
+++ b/views/users.pug
@@ -1,2 +1,22 @@
-div Hello!
 div.user {{user.username}}
+div.post-title Posts
+div.post(ng-repeat="post in user.posts") 
+  div.upvote-wrapper
+    div.upvote.enabled(ng-show="isLoggedIn()", ng-class="hasUpvotedPost(post) ? 'voted' : ''", ng-click="upvotePost(post)") +
+    div.upvote(ng-hide="isLoggedIn()") +
+    div.rating {{post.rating}}
+    div.downvote.enabled(ng-show="isLoggedIn()", ng-class="hasDownvotedPost(post) ? 'voted' : ''", ng-click="downvotePost(post)") -
+    div.downvote(ng-hide="isLoggedIn()") -
+  div.title
+    a(ng-show="post.link" href="{{post.link}}") {{post.title}}
+    div(ng-hide="post.link") {{post.title}}
+  div.body {{post.body}}
+div.comment-title Comments
+div.comment(ng-repeat="comment in user.comments")
+  div.upvote-wrapper
+    div.upvote.enabled(ng-show="isLoggedIn()", ng-class="hasUpvotedComment(comment) ? 'voted' : ''", ng-click="upvoteComment(comment)") +
+    div.upvote(ng-hide="isLoggedIn()") +
+    div.rating {{comment.rating}}
+    div.downvote.enabled(ng-show="isLoggedIn()", ng-class="hasDownvotedComment(comment) ? 'voted' : ''", ng-click="downvoteComment(comment)") -
+    div.downvote(ng-hide="isLoggedIn()") -
+  div.body {{comment.body}}
