--- a/views/home.pug
+++ b/views/home.pug
@@ -15,9 +15,10 @@ div.post-summary(ng-repeat="post in posts | orderBy: '-rating'")
     div.rating {{post.rating}}
     div.downvote.enabled(ng-show="isLoggedIn()", ng-class="hasDownvotedPost(post) ? 'voted' : ''", ng-click="downvotePost(post)") -
     div.downvote(ng-hide="isLoggedIn()") -
-  div.title
-    a(ng-show="post.link", href="{{post.link}}") {{post.title}}
-    div(ng-hide="post.link") {{post.title}}
-  div.author posted by {{post.author}}
-  a.comments(href="/posts/{{post._id}}")
-    | {{post.comments.length == 1 ? '1 comment' : post.comments.length + ' comments'}}
+  div.post-content
+    div.title
+      a(ng-show="post.link", href="{{post.link}}") {{post.title}}
+      div(ng-hide="post.link") {{post.title}}
+    div.author posted by {{post.author}}
+    a.comments(href="/posts/{{post._id}}")
+      | {{post.comments.length == 1 ? '1 comment' : post.comments.length + ' comments'}}
