--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -352,6 +352,16 @@ html, body {
           }
 
           & > .edit {
+            display: inline;
+            font-size: 12px;
+            cursor: pointer;
+            text-decoration: underline;
+            color: @unvisited-link-color;
+            margin-right: 10px;
+          }
+
+          & > .delete {
+            display: inline;
             font-size: 12px;
             cursor: pointer;
             text-decoration: underline;
@@ -373,8 +383,18 @@ html, body {
             font-size: 16px;
             margin-bottom: 5px;
           }
-
+          
           & > .edit {
+            display: inline;
+            font-size: 12px;
+            cursor: pointer;
+            text-decoration: underline;
+            color: @unvisited-link-color;
+            margin-right: 10px;
+          }
+
+          & > .delete {
+            display: inline;
             font-size: 12px;
             cursor: pointer;
             text-decoration: underline;
